--- a/index.html
+++ b/index.html
@@ -10,18 +10,22 @@
   <body>
     <header class="navegador">
       <nav>
+        <div>
         <img class="logo" src="images\spotify-logo.png" alt="logo spotify"/>
+      </div>
+      <div>
         <ul class="listado-entrada">
           <li>Premium</li>
           <li>Discover</li>
           <li>Help</li>
           <li>Download</li>
         </ul>
+      </div>
       </nav>
       <section class="entrada">
         <h1>Music for everyone</h1>
-        <h2>Spotify is now free on mobile, tablet and computer.</h2>
-        <h2> Listen to the right music, wherever you are.</h2>
+        <p>Spotify is now free on mobile, tablet and computer.</p>
+        <p> Listen to the right music, wherever you are.</p>
       </section>
       <section class="boxes">
         <h3>What’s on Spotify?</h3>
