--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
     <link rel="stylesheet" href="./styles/style.css">
   </head>
   <body>
-    <header class="navegador">
+    <header id="navegador">
       <nav>
         <div>
         <img class="logo" src="images\spotify-logo.png" alt="logo spotify"/>
       </div>
       <div>
         <ul class="listado-entrada">
-          <li>Premium</li>
-          <li>Discover</li>
-          <li>Help</li>
-          <li>Download</li>
+          <a><li>Premium</li></a>
+          <a><li>Discover</li></a>
+          <a><li>Help</li></a>
+          <a><li>Download</li></a>
         </ul>
       </div>
       </nav>
@@ -27,25 +27,25 @@
         <p>Spotify is now free on mobile, tablet and computer.</p>
         <p> Listen to the right music, wherever you are.</p>
       </section>
-      <section class="boxes">
+      <section id="boxes">
         <h3>What’s on Spotify?</h3>
-        <article>
+        <article class="boxes1">
           <img class="music" src="images\music-icon.png" alt="music icon">
           <h4>Million of Songs</h4>
           <p>There are millions of songs on Spotify</p>
         </article>
-        <article>
+        <article class="boxes2">
           <img class="HD-icon" src="images\high-quality-icon.png" alt="HD icon">
           <h4> HD Music</h4>
           <p>Listen to music as if you were listening live</p>
         </article>
-        <article>
+        <article class="boxes3">
           <img class="stream" src="images\devices-icon.png" alt="device icon">
           <h4>Stream Everywhere</h4>
           <p> Stream music on your smartphone, tablet or computer</p>
         </article>
       </section>
-      <section class="articles">
+      <section id="articles">
         <h3>It’s as yeezy as Kanye West.</h3>
         <article>
           <h4>Search</h4>
