--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Spotify Clone</title>
     <link rel="stylesheet" href="./styles/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400&family=Roboto:wght@300&display=swap" rel="stylesheet">
   </head>
   <body>
     <header id="navegador">
@@ -47,10 +50,12 @@
       </section>
       <section id="articles">
         <h3>It’s as yeezy as Kanye West.</h3>
-        <article>
+        <div>
+        <article class="todos">
           <h4>Search</h4>
           <p>Know what you want to listen to? Just search and hit play.</p>
         </article>
+      </div>
         <article>
           <h4>Browse</h4>
           <p>Check out the
@@ -63,5 +68,6 @@
         </article>
       </section>
     </header>
+
   </body>
 </html>
