--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
       </div>
       <div>
         <ul class="listado-entrada">
-          <a><li>Premium</li></a>
-          <a><li>Discover</li></a>
-          <a><li>Help</li></a>
-          <a><li>Download</li></a>
+          <a href="#"><li>Premium</li></a>
+          <a href="#" ><li>Discover</li></a>
+          <a href="#"><li>Help</li></a>
+          <a href="#"><li>Download</li></a>
         </ul>
       </div>
       </nav>
@@ -52,17 +52,17 @@
         <h3>It’s as yeezy as Kanye West.</h3>
         <div>
         <article class="todos">
-          <h4>Search</h4>
+          <a href="#"><h4>Search</h4></a>
           <p>Know what you want to listen to? Just search and hit play.</p>
         </article>
       </div>
         <article>
-          <h4>Browse</h4>
+          <a href="#"><h4>Browse</h4></a>
           <p>Check out the
             latest charts, brand new releases and great playlists for right now.</p>
         </article>
         <article>
-          <h4>Discover</h4>
+          <a href="#"><h4>Discover</h4></a>
           <p>Enjoy new music every Monday with your
             own personal playlist. Or sit back and enjoy Radio.</p> 
         </article>
