--- a/index.html
+++ b/index.html
@@ -12,19 +12,16 @@
   </head>
   <body>
     <header id="navegador">
-      <nav>
-        <div>
         <img class="logo" src="images\spotify-logo.png" alt="logo spotify"/>
-      </div>
-      <div>
+      <nav>
         <ul class="listado-entrada">
           <a href="#"><li>Premium</li></a>
           <a href="#" ><li>Discover</li></a>
           <a href="#"><li>Help</li></a>
           <a href="#"><li>Download</li></a>
         </ul>
-      </div>
       </nav>
+      </header>
       <section class="entrada">
         <h1>Music for everyone</h1>
         <p>Spotify is now free on mobile, tablet and computer.</p>
