--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
           <a href="#"><h4>Discover</h4></a>
           <p>Enjoy new music every Monday with your
             own personal playlist. Or sit back and enjoy Radio.</p> 
+
+            <img class= "logo-blanco" src="./images/spotify-icon-white.png" alt="logo blanco">
+            <img class= "app" src="./images\spotify-app.jpg" alt="app photo">
         </article>
       </section>
     </header>
