--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
       <nav>
         <ul class="listado-entrada">
           <a href="#"><li>Premium</li></a>
-          <a href="#" ><li>Discover</li></a>
-          <a href="#"><li>Help</li></a>
-          <a href="#"><li>Download</li></a>
+          <a href="#"></a><li>Discover</li></a>
+          <a href="#"></a><li>Help</li></a>
+          <a href="#"> <li>Download</li> </a>
         </ul>
       </nav>
       </header>
@@ -29,6 +29,7 @@
       </section>
       <section id="boxes">
         <h3>What’s on Spotify?</h3>
+        <div class="todos-boxes">
         <article class="boxes1">
           <img class="music" src="images\music-icon.png" alt="music icon">
           <h4>Million of Songs</h4>
@@ -44,25 +45,25 @@
           <h4>Stream Everywhere</h4>
           <p> Stream music on your smartphone, tablet or computer</p>
         </article>
+      </div>
       </section>
       <section id="articles">
         <h3>It’s as yeezy as Kanye West.</h3>
         <div>
         <article class="todos">
-          <a href="#"><h4>Search</h4></a>
+          <h4>Search</h4>
           <p>Know what you want to listen to? Just search and hit play.</p>
         </article>
       </div>
         <article>
-          <a href="#"><h4>Browse</h4></a>
+          <h4>Browse</h4>
           <p>Check out the
             latest charts, brand new releases and great playlists for right now.</p>
         </article>
         <article>
-          <a href="#"><h4>Discover</h4></a>
+          <h4>Discover</h4>
           <p>Enjoy new music every Monday with your
             own personal playlist. Or sit back and enjoy Radio.</p> 
-
             <img class= "logo-blanco" src="./images/spotify-icon-white.png" alt="logo blanco">
             <img class= "app" src="./images\spotify-app.jpg" alt="app photo">
         </article>
