--- a/index.html
+++ b/index.html
@@ -48,13 +48,16 @@
       </div>
       </section>
       <section id="articles">
-        <h3>It’s as yeezy as Kanye West.</h3>
         <div>
+          <img class="logo-blanco" src="images/spotify-icon-white.png" alt="logo-blanco">
+          <img class="app" src="images/spotify-app.jpg" alt="app photo">
+        </div>
+        <div>
+          <h3>It’s as yeezy as Kanye West.</h3>
         <article class="todos">
           <h4>Search</h4>
           <p>Know what you want to listen to? Just search and hit play.</p>
         </article>
-      </div>
         <article>
           <h4>Browse</h4>
           <p>Check out the
@@ -64,9 +67,8 @@
           <h4>Discover</h4>
           <p>Enjoy new music every Monday with your
             own personal playlist. Or sit back and enjoy Radio.</p> 
-            <img class= "logo-blanco" src="./images/spotify-icon-white.png" alt="logo blanco">
-            <img class= "app" src="./images\spotify-app.jpg" alt="app photo">
         </article>
+      </div>
       </section>
     </header>
 
