--- a/index.html
+++ b/index.html
@@ -49,12 +49,9 @@
       </section>
       <section id="articles">
         <div>
-          <img class="logo-blanco" src="images/spotify-icon-white.png" alt="logo-blanco">
-          <img class="app" src="images/spotify-app.jpg" alt="app photo">
-        </div>
-        <div>
           <h3>It’s as yeezy as Kanye West.</h3>
-        <article class="todos">
+          <div class="todos">
+        <article>
           <h4>Search</h4>
           <p>Know what you want to listen to? Just search and hit play.</p>
         </article>
@@ -69,8 +66,13 @@
             own personal playlist. Or sit back and enjoy Radio.</p> 
         </article>
       </div>
+        </div>
+      <div>
+        <img class="logo-blanco" src="images/spotify-icon-white.png" alt="logo blanco">
+      </div>
+      <div>
+        <img class="app" src="images\spotify-app.jpg" alt="app">
+      </div>
       </section>
-    </header>
-
   </body>
 </html>
